# atone

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build.rs  tarpaulin.toml
.github/workflows/: check.yml  safety.yml  scheduled.yml  test.yml
benches/: vroom.rs
misc/: vroom.plt
src/: iter.rs  lib.rs
src/external_trait_impls/: mod.rs  rayon.rs  serde.rs
tests/: quick.rs  rayon.rs  serde.rs
