[package]
name = "atone"
version = "0.3.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A VecDeque and Vec variant that spreads resize load across pushes."
repository = "https://github.com/jonhoo/atone.git"

keywords = ["vec", "no_std", "vecdeque", "amortized"]
categories = ["data-structures", "no-std"]

build = "build.rs"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "atone", build = "28" }
codecov = { repository = "jonhoo/atone", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]

[build-dependencies]
# TODO: replace with https://github.com/rust-lang/rust/issues/64797
#       or remove when necessary features stabilize
rustversion = "1.0.3"

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
quickcheck = { version = "0.9", default-features = false }

[target.'cfg(not(target_env="msvc"))'.dev-dependencies]
jemallocator = "0.3"

[[bench]]
name = "vroom"
harness = false
