[package]
name = "atone"
version = "0.3.6"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A VecDeque and Vec variant that spreads resize load across pushes."
repository = "https://github.com/jonhoo/atone.git"

keywords = ["vec", "no_std", "vecdeque", "amortized"]
categories = ["data-structures", "no-std"]

[dependencies]
# For external trait impls
rayon_ = { version = "1.0", optional = true, package = "rayon" }
serde_ = { version = "1.0.114", default-features = false, optional = true, package = "serde" }

[dev-dependencies]
lazy_static = "1.2"
rand = { version = "0.7.3", features = ["small_rng"] }
quickcheck = { version = "0.9", default-features = false }
rayon_ = { version = "1.2.0", package = "rayon" }
serde_test = "1.0.114"
serde_json = "1.0.56"

[features]
serde = [ "serde_" ]
rayon = [ "rayon_" ]

[target.'cfg(not(target_env="msvc"))'.dev-dependencies]
jemallocator = "0.3"

[package.metadata.docs.rs]
features = ["rayon", "serde"]

[[bench]]
name = "vroom"
harness = false
