[package]
name = "atone"
version = "0.3.8"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.73" # uXX::div_ceil

readme = "README.md"
description = "A VecDeque and Vec variant that spreads resize load across pushes."
repository = "https://github.com/jonhoo/atone.git"

keywords = ["vec", "no_std", "vecdeque", "amortized"]
categories = ["data-structures", "no-std"]

[dependencies]
# For external trait impls
rayon_ = { version = "1.0", optional = true, package = "rayon" }
serde_ = { version = "1.0.114", default-features = false, optional = true, package = "serde" }

[dev-dependencies]
lazy_static = "1.2"
rand = { version = "0.9.2", features = ["small_rng"] }
quickcheck = { version = "1.0", default-features = false }
rayon_ = { version = "1.2.0", package = "rayon" }
serde_test = "1.0.114"
serde_json = "1.0.56"

[features]
serde = [ "serde_" ]
rayon = [ "rayon_" ]

[target.'cfg(not(target_env="msvc"))'.dev-dependencies]
jemallocator = "0.5"

[package.metadata.docs.rs]
features = ["rayon", "serde"]

[[bench]]
name = "vroom"
harness = false
